# alphagenome_FT_MPRA

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
alphagenome_ft/: README.md  custom_heads.py  custom_model.py  parameter_utils.py
alphagenome_ft_mpra/: README.md  __init__.py  data.py  enf_utils.py  episomal_data.py  episomal_utils.py  hub.py  mpra_heads.py  oracle.py  plant_starrseq_utils.py  plant_torch.py  training.py
assets/: episomal_bar_results_may19.csv  hf_model_card.md
configs/: README.md  episomal_HepG2.json  episomal_K562.json  episomal_SKNSH.json  mpra_HepG2.json  mpra_HepG2_fold0.json  mpra_HepG2_random_init.json  mpra_K562.json  mpra_K562_fold0.json  mpra_K562_random_init.json  mpra_WTC11.json  mpra_WTC11_fold0.json  mpra_WTC11_random_init.json  plant_starrseq_alphagenome_leaf.json  plant_starrseq_alphagenome_proto.json  plant_starrseq_jores_leaf.json  plant_starrseq_jores_proto.json  plant_starrseq_ntv3_leaf.json  plant_starrseq_ntv3_proto.json  plant_starrseq_plantcad2_leaf.json  plant_starrseq_plantcad2_proto.json  plant_starrseq_plantcaduceus_leaf.json  plant_starrseq_plantcaduceus_proto.json  starrseq.json
docs/: model_efficiency_table.md  model_weights.md  plant_starrseq_caveats.md  plant_starrseq_environments.md  supplementary_motif_analysis.md
requirements/: plant_starrseq_jores.txt  plant_starrseq_ntv3.txt  plant_starrseq_plantcad2.txt
scripts/: README.md  build_lentimpra_coords.py  cache_deepstarr_embeddings.py  cache_embeddings.py  collate_benchmark_results.py  compute_attributions.py  compute_attributions_starrseq.py  convert_plant_ag_checkpoints_to_orbax.py  create_mpra_comparison_table.py  fetch_cagi5_references.py  fetch_episomal_data.py  fetch_plant_starrseq_data.py  finetune_enformer_episomal_mpra.py  finetune_enformer_mpra.py  finetune_enformer_starrseq.py  finetune_episomal_mpra.py  finetune_jores_plant_starrseq.py  finetune_mpra.py  finetune_ntv3_plant_starrseq.py  finetune_plant_starrseq.py  finetune_plantcad2_plant_starrseq.py  finetune_starrseq.py  generate_benchmark_jobs.py  plot_benchmark_results.py  plot_cagi5_results.py  plot_episomal_benchmark_results.py  plot_plant_starrseq_benchmark_results.py  regenerate_benchmark_results.py  reproduce_plant_starrseq_table.py  run_fimo.sh  run_fimo_batch.py  subset_compare_fold0.py  test_cagi5_zero_shot_base.py  test_cagi5_zero_shot_enformer_mpra.py  test_cagi5_zero_shot_mpra.py  test_cagi5_zero_shot_mpralegnet.py  test_episomal_mpra.py  test_ft_model_enformer_mpra.py  test_ft_model_enformer_starrseq.py  test_ft_model_mpra.py  (+5 more)
src/: README.md  __init__.py  data.py  enf_utils.py  ft_utils.py  mpra_heads.py  seq_loader.py  training.py
tests/: test_episomal_data.py  test_oracle_predict.py  test_plant_starrseq_data.py
wandb/: latest-run
(+88 files in other folders)
