[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphagenome-ft-mpra"
version = "0.1.0"
description = "MPRA finetuning application using AlphaGenome"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "requests>=2.32.5",
    # AlphaGenome finetuning utilities
    # Use local development version for now:
    "alphagenome-ft @ file:///grid/koo/home/amurphy/projects/alphagenome_ft",
    # After pushing to GitHub, replace above with:
    # "alphagenome-ft @ git+https://github.com/YOUR_USERNAME/alphagenome_ft.git",
    "wandb>=0.23.1",
    "bio>=1.8.1",
    "pysam>=0.23.3",
    "jinja2>=3.1.6",
    "logomaker>=0.8.7",
]

[tool.setuptools]
packages = ["src"]
