[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphagenome-ft-mpra"
version = "0.1.0"
description = "MPRA finetuning application using AlphaGenome"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "requests>=2.32.5",
    # AlphaGenome packages
    "alphagenome",
    # AlphaGenome research (local development version)
    "alphagenome-research @ file:///grid/koo/home/amurphy/projects/alphagenome_research",
    # AlphaGenome finetuning utilities
    # Use local development version for now:
    "alphagenome-ft @ file:///grid/koo/home/amurphy/projects/alphagenome_ft",
    "wandb>=0.23.1",
    "bio>=1.8.1",
    "pysam>=0.23.3",
    "jinja2>=3.1.6",
    "logomaker>=0.8.7",
    "jax[cuda12]>=0.9.0",
    "pybigwig>=0.3.25",
]

[tool.setuptools]
packages = ["src"]
